--- a/NoSQl/lab1/package.json
+++ b/NoSQl/lab1/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.9.2",
     "@types/pg": "^8.15.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "pg": "^8.16.3"
+    "mongoose": "^9.0.0",
+    "pg": "^8.16.3",
+    "redis": "^5.10.0"
   }
 }
